--- a/instructor-window.html
+++ b/instructor-window.html
@@ -7,7 +7,7 @@
     <div class="game-information">
       <div class="game-info-field" id="creator-div"></div>
       <div class="game-info-field" id="date-created-div"></div>
-      <div class="game-info-field" id="comments-div"></div>
+      <div class="game-info-field" id="game-comments-div"></div>
     </div>
     <div class="aq-information">
       <div class="aq-field" id="answer-div"></div>
