--- a/instructor-window.html
+++ b/instructor-window.html
@@ -5,15 +5,22 @@
   </head>
   <body>
     <div class="game-information">
-      <div class="game-info-field" id="creator-div"></div>
-      <div class="game-info-field" id="date-created-div"></div>
-      <div class="game-info-field" id="game-comments-div"></div>
+      <div class="game-info-field" id="creator-div">creator</div>
+      <div class="game-info-field" id="date-created-div">date created</div>
+      <div class="game-info-field" id="game-comments-div">comments</div>
+    </div>
+    <div id="round-information">
+      <div id="round-name"></div>
+      <div id="round-number"></div>
+      <div id="total-rounds"></div>
+      <div id="final-jeopardy-included"></div>
     </div>
     <div class="aq-information">
-      <div class="aq-field" id="answer-div"></div>
-      <div class="aq-field" id="question-div"></div>
-      <div class="aq-field" id="source-div"></div>
-      <div class="aq-field" id="comments-div"></div>
+      <div class="aq-field" id="answer-div">example answer</div>
+      <div class="aq-field" id="question-div">example question</div>
+      <div class="aq-field" id="source-div">example source</div>
+      <div class="aq-field" id="comments-div">example comments</div>
+      <div class="qa-timer" id="overlay-timer">example timer</div>
     </div>
   </body>
 </html>
