--- a/jeopardy-game.html
+++ b/jeopardy-game.html
@@ -24,10 +24,10 @@
     <div id="finalGrid"></div>
 
     <div id="overlay-box" onclick="clickOverlay(this)">
-      <div class="qa-item" id="overlay-points"></div>
-      <div class="qa-item" id="overlay-answer"></div>
-      <div class="qa-item" id="overlay-question"></div>
-      <div class="qa-item" id="overlay-source"></div>
+      <div class="overlay-item" id="overlay-points"></div>
+      <div class="overlay-item" id="overlay-answer"></div>
+      <div class="overlay-item" id="overlay-question"></div>
+      <div class="overlay-item" id="overlay-source"></div>
     </div>
 
 </body>
