--- a/jeopardy-game.html
+++ b/jeopardy-game.html
@@ -13,13 +13,20 @@
 
 </head>
 <body>
-<div class="title"><h3>Jeopardy Game</h3></div>
-
-
-    <div id="title">
-        <input type="file" id="file" name="file" />
-        <output id="list"></output>
-        <input type="button" id="openIWindow" value="Open Instructor Window">
+    <div id="top">
+        <div id="collapse_icon">
+            <div class="icon_period">.</div>
+            <div class="icon_period">.</div>
+            <div class="icon_period">.</div>
+        </div>
+        <div id="top_sub_container">
+            <div class="title"><h3>Jeopardy Game</h3></div>
+            <div id="title">
+                <input type="file" id="file" name="file" />
+                <output id="list"></output>
+                <input type="button" id="openIWindow" value="Open Instructor Window">
+            </div>
+        </div>
     </div>
     <div id="finalGrid"></div>
 
@@ -29,6 +36,5 @@
       <div class="overlay-item" id="overlay-question"></div>
       <div class="overlay-item" id="overlay-source"></div>
     </div>
-
 </body>
 </html>
