--- a/jeopardy-game.html
+++ b/jeopardy-game.html
@@ -6,8 +6,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jscolor/2.4.5/jscolor.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-ui-bootstrap/0.5pre/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="jeopardygame.css">
-    <script type="text/javascript" src="jplayer.js"></script>
+    <link rel="stylesheet" href="scripts/jeopardygame.css">
+    <script type="text/javascript" src="scripts/jplayer.js"></script>
 
 
 
