Changed to minimize button

--- a/jeopardy-game.html
+++ b/jeopardy-game.html
@@ -15,9 +15,7 @@
 <body>
     <div id="top">
         <div id="collapse_icon">
-            <div class="icon_period">.</div>
-            <div class="icon_period">.</div>
-            <div class="icon_period">.</div>
+            <div class="icon_period">minimize</div>
         </div>
         <div id="top_sub_container">
             <div class="title"><h3>Jeopardy Game</h3></div>
