Added instructions about opening IWindow
Due to network settings, some browsers/computers will not allow the instructor window to automatically open when a game is loaded.  An informational note was added.

--- a/jeopardy-game.html
+++ b/jeopardy-game.html
@@ -23,6 +23,8 @@
                 <input type="file" id="file" name="file" />
                 <output id="list"></output>
                 <input type="button" id="openIWindow" value="Open Instructor Window">
+                <input type="button" id="openIWindow" value="Open Instructor Window">
+                <span>Due to network security settings, if the instructor window does not automatically open, use this button.</span>
             </div>
         </div>
     </div>
